Improved documentation of the DistanceTangentialVelocity notebook.

--- a/Notebooks/DistanceTangentialVelocity.ipynb
+++ b/Notebooks/DistanceTangentialVelocity.ipynb
@@ -1717,6 +1717,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that 'pmra' denotes $\\mu_{\\alpha^*} \\equiv \\mu_{\\alpha} \\cos\\delta$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
